# NoteTakingAgent

./: .env.example  .gitignore  BUILD_SUMMARY.md  README.md  agent.py  main.py  notion_client.py  notion_run.py  notion_start.py  pyproject.toml  requirements.txt  router.py  streamlit_app.py  testing_basic_codes.ipynb
backend/: .gitignore  QUICKSTART.md  create_structure.py  move_to_backend.py  notion_client.py  notion_run.py  pyproject.toml  requirements.txt  streamlit_app.py  test_agent.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: notes.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: note.py  user.py
backend/app/schemas/: note.py
backend/app/services/: llm_service.py  notion_service.py  voice_service.py
backend/app/utils/: data_parsing.py  date_tools.py
backend/config/: config.yaml
backend/data/: app.db  test_data2.md
backend/logger/: __init__.py  custom_logging.py
backend/utils/: date_tools.py
config/: config.yaml  settings.py
data/: run_agent_tests.py  test_data.md
frontend/: .env.local  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: Dashboard.tsx  Landing.tsx
frontend/src/services/: api.ts
logger/: __init__.py
notebooks/: notion.ipynb  notion_start.py  testing_basic_codes.ipynb
notion_main/: notion_run.py
src/graph/: state.py
src/llm/: router.py
src/notion_main/: client.py
utils/: data_parsing.py  docsIO.py  voice_module.py
